# fleet

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/scripts/: make_windows_ico.py  normalize_releases.py
.github/workflows/: release.yml
crates/application/fleet-app-core/: Cargo.toml
crates/application/fleet-app-core/src/: app.rs  async_runtime.rs  domain.rs  kernel.rs  launcher.rs  lib.rs  orchestrator.rs  persistence.rs  pipeline.rs  ports.rs  viewmodel.rs
crates/application/fleet-app-core/src/app_core/: commands.rs  events.rs  mod.rs  reducer.rs  store.rs
crates/application/fleet-app-core/tests/: check_regression_no_tokio_runtime.rs  kernel_run_id_filtering.rs  unknown_and_repair_state.rs
crates/application/fleet-pipeline/: Cargo.toml
crates/application/fleet-pipeline/src/: io_utils.rs  lib.rs  tracker.rs
crates/application/fleet-pipeline/src/sync/: engine.rs  execute.rs  local.rs  mod.rs  remote.rs  storage.rs
crates/application/fleet-pipeline/tests/: cache_lock_does_not_fail_smart_verify.rs  cold_start_test.rs  delta_repo.rs  differential_fetch_test.rs  fast_check_logic.rs  local_integrity_errors_on_busy_db.rs  path_normalization_flow.rs  repair_snapshot.rs  security_traversal.rs  sync_integration.rs  sync_reliability.rs  url_normalization.rs
crates/application/fleet-scanner/: Cargo.toml
crates/application/fleet-scanner/src/: cache.rs  lib.rs
crates/application/fleet-scanner/tests/: cache_behavior.rs
crates/domain/fleet-core/: Cargo.toml
crates/domain/fleet-core/src/: diff.rs  lib.rs  path_utils.rs  repo.rs
crates/domain/fleet-core/src/formats/: mod.rs  repo.rs
crates/domain/fleet-core/src/formats/srf/: mod.rs
crates/domain/fleet-core/tests/: diff_complex.rs  parse_mod_srf.rs
crates/infrastructure/fleet-infra/: Cargo.toml
crates/infrastructure/fleet-infra/src/: lib.rs
crates/infrastructure/fleet-infra/src/hashing/: mod.rs
crates/infrastructure/fleet-infra/src/launcher/: mod.rs  platform.rs
crates/infrastructure/fleet-infra/src/net/: mod.rs
crates/infrastructure/fleet-infra/tests/: pbo_sorting.rs
crates/infrastructure/fleet-persistence/: Cargo.toml
crates/infrastructure/fleet-persistence/src/: api.rs  cache_key.rs  codec.rs  error.rs  lib.rs  maintenance.rs  paths.rs  redb_store.rs
crates/infrastructure/fleet-persistence/tests/: cache_range_behavior.rs  concurrent_open.rs  corrupt_redb_is_quarantined.rs  validate_states.rs
crates/interfaces/fleet/: Cargo.toml
crates/interfaces/fleet-cli/: Cargo.toml
crates/interfaces/fleet-cli/src/: commands.rs  lib.rs  main.rs  profiles.rs
crates/interfaces/fleet-cli/tests/: e2e_workflow.rs
crates/interfaces/fleet-config/: Cargo.toml
crates/interfaces/fleet-config/src/: lib.rs
crates/interfaces/fleet-ui/: Cargo.toml
crates/interfaces/fleet-ui/src/: app.rs  lib.rs  theme.rs  updates.rs  utils.rs
crates/interfaces/fleet-ui/src/components/: command.rs  forms.rs  header.rs  mod.rs  readout.rs  sidebar.rs  visualizer.rs
crates/interfaces/fleet-ui/src/screens/: dashboard.rs  editor.rs  mod.rs  settings.rs
crates/interfaces/fleet/src/: main.rs
test_files/: legacy_format_mod.srf  mod.srf  repo.json
test_files/@ace_compat_cup_vehicles/: attributions.txt  cup-l_license.txt  cup_on_linux_servers.txt  cup_vehicles_ace_compat-1.16.0-changelog.txt  logo_cup_ca_small.paa  meta.cpp  mod.cpp  mod.srf  sums.sha1
test_files/@ace_compat_cup_vehicles/addons/: cup_vehicles_ace_compat.pbo.cup_vehicles_ace_compat-1.16.0.bisign
test_files/@ace_compat_cup_vehicles/addons/cup_vehicles_ace_compat/cup/cup_vehicles_ace_compat/: $PBOPREFIX$.txt  cfgammo.hpp  cfgfunctions.hpp  cfgmagazines.hpp  cfgvehicles.hpp  cfgweapons.hpp  config.cpp  helicopters.hpp  macro.hpp  script_component.hpp  support.hpp
test_files/@ace_compat_cup_vehicles/addons/cup_vehicles_ace_compat/cup/cup_vehicles_ace_compat/functions/: fnc_fastroping_oncuthc3.sqf  fnc_fastroping_oncutuh1y.sqf  fnc_fastroping_onpreparehc3.sqf  fnc_fastroping_onprepareuh1y.sqf
test_files/@ace_compat_cup_vehicles/keys/: cup_vehicles_ace_compat-1.16.0.bikey
