[workspace]
resolver = "2"
members = [
    "crates/application/fleet-scanner",
    "crates/application/fleet-pipeline",
    "crates/application/fleet-app-core",
    "crates/domain/fleet-core",
    "crates/infrastructure/fleet-persistence",
    "crates/infrastructure/fleet-infra",
    "crates/interfaces/fleet",
    "crates/interfaces/fleet-cli",
    "crates/interfaces/fleet-ui",
    "crates/interfaces/fleet-config",
]

[workspace.package]
license = "GPL-3.0-only"

[workspace.dependencies]
# Internal crates
fleet-cli = { path = "crates/interfaces/fleet-cli", version = "0.2.0" }
fleet-core = { path = "crates/domain/fleet-core", version = "0.1.0" }
fleet-infra = { path = "crates/infrastructure/fleet-infra", version = "0.1.0" }
fleet-persistence = { path = "crates/infrastructure/fleet-persistence", version = "0.1.0" }
fleet-scanner = { path = "crates/application/fleet-scanner", version = "0.1.0" }
fleet-config = { path = "crates/interfaces/fleet-config", version = "0.1.0" }
fleet-app-core = { path = "crates/application/fleet-app-core", version = "0.1.0" }
fleet-pipeline = { path = "crates/application/fleet-pipeline", version = "0.1.0" }
fleet-ui = { path = "crates/interfaces/fleet-ui", version = "0.2.0" }

# Error handling & utilities
anyhow = "1.0.100"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4"] }
hex = "0.4.3"
velopack = "0.0.1369-g1d5c984"

# Core bytes/encoding helpers
bytes = "1.11.0"
byteorder = "1.5.0"
camino = "1.2.1"
percent-encoding = "2.3.1"

# Serialization / Parsing
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
md5 = "0.8.0"         # hashing (legacy MD5 checksums)

# Async / Networking
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
async-trait = "0.1.83"
hyper = "1.5.1"
axum = { version = "0.7.5", default-features = false, features = ["tokio", "http1"] }

# Concurrency / Performance
rayon = "1.11.0"

# CLI
clap = { version = "4.5.53", features = ["derive"] }

# UI (eframe/egui stack)
eframe = "0.33.2"
egui = "0.33.2"
egui_extras = "0.33.2"
rfd = "0.16.0"

# Filesystem / Platform utilities
walkdir = "2.5.0"
directories = "6.0.0"
winreg = "0.55.0"
filetime = "0.2.0"
tempfile = "3.14.0"
shlex = "1.3.0"

# Time handling
chrono = "0.4.42"

# Logging / Observability
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
governor = "0.10.2"
nonzero_ext = "0.3.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
