[package]
name = "fleet-app-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
fleet-config = { workspace = true }
fleet-pipeline = { workspace = true }
fleet-core = { workspace = true }
fleet-scanner = { workspace = true }
fleet-infra = { workspace = true }
directories = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
tokio-util = "0.7"
uuid = { workspace = true, features = ["v4", "serde"] }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
