[package]
name = "fleet-persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = { workspace = true }
chrono = { workspace = true }
fleet-core = { workspace = true }
redb = "2.2.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
