[package]
name = "fleet-cli"
version = "0.2.0"
edition = "2021"

[lib]
name = "fleet_cli"
path = "src/lib.rs"

[[bin]]
name = "fleet-cli"
path = "src/main.rs"

[dependencies]
# Core Logic
fleet-config = { workspace = true }
fleet-pipeline = { workspace = true }
fleet-core = { workspace = true }
fleet-scanner = { workspace = true }
fleet-infra = { workspace = true }
fleet-app-core = { workspace = true }
fleet-persistence = { workspace = true }

# Utilities
anyhow = { workspace = true }
camino = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI & UX
clap = { workspace = true, features = ["derive", "env"] }
humansize = "2.1"
indicatif = "0.17"

[dev-dependencies]
axum = { version = "0.7.5", default-features = false, features = ["tokio", "http1"] }
tempfile = "3.10"
