[package]
name = "fleet-ui"
version = "0.2.0"
edition = "2021"
autobins = false

[lib]
name = "fleet_ui"
path = "src/lib.rs"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_taffy = "0.10.0"
fleet-app-core = { workspace = true }
fleet-core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true }
velopack = { workspace = true }
rfd = { workspace = true }
